kustomize/overlays/beta/rogfk-no/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: fint-core-consumer-personvern-samtykke
spec:
  entryPoints:
    - web
  routes:
    - match: "Host(`beta.felleskomponent.no`) && PathPrefix(`/personvern/samtykke/`) && Headers(`x-org-id`, `rogfk.no`)"

      kind: Rule
      services:
        - name: fint-core-consumer-personvern-samtykke
          port: 8080
